@@ -14,6 +14,7 @@
  */
 package org.hyperledger.besu.ethereum.api.jsonrpc.internal.methods.engine;
 
+import static java.util.Collections.emptyList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
@@ -25,8 +26,8 @@ import org.hyperledger.besu.consensus.merge.PayloadWrapper;
 import org.hyperledger.besu.consensus.merge.blockcreation.PayloadIdentifier;
 import org.hyperledger.besu.datatypes.Address;
 import org.hyperledger.besu.datatypes.BlobGas;
-import org.hyperledger.besu.datatypes.BlobsWithCommitments;
 import org.hyperledger.besu.datatypes.Hash;
+import org.hyperledger.besu.datatypes.RequestType;
 import org.hyperledger.besu.datatypes.TransactionType;
 import org.hyperledger.besu.datatypes.Wei;
 import org.hyperledger.besu.ethereum.api.jsonrpc.RpcMethod;
@@ -41,12 +42,14 @@ import org.hyperledger.besu.ethereum.core.BlockBody;
 import org.hyperledger.besu.ethereum.core.BlockHeader;
 import org.hyperledger.besu.ethereum.core.BlockHeaderTestFixture;
 import org.hyperledger.besu.ethereum.core.BlockWithReceipts;
+import org.hyperledger.besu.ethereum.core.Request;
 import org.hyperledger.besu.ethereum.core.Transaction;
 import org.hyperledger.besu.ethereum.core.TransactionReceipt;
 import org.hyperledger.besu.ethereum.core.TransactionTestFixture;
+import org.hyperledger.besu.ethereum.core.kzg.BlobsWithCommitments;
 
 import java.math.BigInteger;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 
@@ -58,8 +61,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-@ExtendWith(
-    MockitoExtension.class) // mocks in parent class may not be used, throwing unnecessary stubbing
+@ExtendWith({MockitoExtension.class})
 public class EngineGetPayloadV4Test extends AbstractEngineGetPayloadTest {
 
   public EngineGetPayloadV4Test() {
@@ -88,6 +90,15 @@ public class EngineGetPayloadV4Test extends AbstractEngineGetPayloadTest {
   @Test
   public void shouldReturnExpectedMethodName() {
     assertThat(method.getName()).isEqualTo("engine_getPayloadV4");
+  }
+
+  @Test
+  public void shouldReturnUnsupportedForkIfBlockTimestampIsBeforePragueMilestone() {
+    final var resp = resp(RpcMethod.ENGINE_GET_PAYLOAD_V4.getMethodName(), mockPid);
+
+    assertThat(resp).isInstanceOf(JsonRpcErrorResponse.class);
+    assertThat(((JsonRpcErrorResponse) resp).getErrorType())
+        .isEqualTo(RpcErrorType.UNSUPPORTED_FORK);
   }
 
   @Override
@@ -128,19 +139,25 @@ public class EngineGetPayloadV4Test extends AbstractEngineGetPayloadTest {
     BlockWithReceipts block =
         new BlockWithReceipts(
             new Block(
-                header,
-                new BlockBody(
-                    List.of(blobTx),
-                    Collections.emptyList(),
-                    Optional.of(Collections.emptyList()),
-                    Optional.of(Collections.emptyList()))),
+                header, new BlockBody(List.of(blobTx), emptyList(), Optional.of(emptyList()))),
             List.of(blobReceipt));
-    PayloadWrapper payload = new PayloadWrapper(payloadIdentifier, block);
+    final List<Request> requests =
+        List.of(
+            new Request(RequestType.DEPOSIT, Bytes.of(1)),
+            new Request(RequestType.WITHDRAWAL, Bytes.of(1)),
+            new Request(RequestType.CONSOLIDATION, Bytes.of(1)));
+    PayloadWrapper payload = new PayloadWrapper(payloadIdentifier, block, Optional.of(requests));
 
     when(mergeContext.retrievePayloadById(payloadIdentifier)).thenReturn(Optional.of(payload));
 
     final var resp = resp(RpcMethod.ENGINE_GET_PAYLOAD_V4.getMethodName(), payloadIdentifier);
     assertThat(resp).isInstanceOf(JsonRpcSuccessResponse.class);
+    final List<String> requestsWithoutRequestId =
+        requests.stream()
+            .sorted(Comparator.comparing(Request::getType))
+            .map(Request::getEncodedRequest)
+            .map(Bytes::toHexString)
+            .toList();
     Optional.of(resp)
         .map(JsonRpcSuccessResponse.class::cast)
         .ifPresent(
@@ -148,9 +165,6 @@ public class EngineGetPayloadV4Test extends AbstractEngineGetPayloadTest {
               assertThat(r.getResult()).isInstanceOf(EngineGetPayloadResultV4.class);
               final EngineGetPayloadResultV4 res = (EngineGetPayloadResultV4) r.getResult();
               assertThat(res.getExecutionPayload().getWithdrawals()).isNotNull();
-              assertThat(res.getExecutionPayload().getDepositRequests()).isNotNull();
-              assertThat(res.getExecutionPayload().getWithdrawalRequests()).isNotNull();
-              assertThat(res.getExecutionPayload().getConsolidationRequests()).isNotNull();
               assertThat(res.getExecutionPayload().getHash())
                   .isEqualTo(header.getHash().toString());
               assertThat(res.getBlockValue()).isEqualTo(Quantity.create(0));
@@ -161,17 +175,57 @@ public class EngineGetPayloadV4Test extends AbstractEngineGetPayloadTest {
               assertThat(res.getExecutionPayload().getExcessBlobGas()).isNotEmpty();
               assertThat(res.getExecutionPayload().getExcessBlobGas())
                   .isEqualTo(expectedQuantityOf10);
+              assertThat(res.getExecutionRequests()).isNotEmpty();
+              assertThat(res.getExecutionRequests()).isEqualTo(requestsWithoutRequestId);
             });
     verify(engineCallListener, times(1)).executionEngineCalled();
   }
 
   @Test
-  public void shouldReturnUnsupportedFork() {
-    final var resp = resp(RpcMethod.ENGINE_GET_PAYLOAD_V4.getMethodName(), mockPid);
+  public void shouldExcludeEmptyRequestsInRequestsList() {
 
-    assertThat(resp).isInstanceOf(JsonRpcErrorResponse.class);
-    assertThat(((JsonRpcErrorResponse) resp).getErrorType())
-        .isEqualTo(RpcErrorType.UNSUPPORTED_FORK);
+    BlockHeader header =
+        new BlockHeaderTestFixture().timestamp(pragueHardfork.milestone() + 1).buildHeader();
+    PayloadIdentifier payloadIdentifier =
+        PayloadIdentifier.forPayloadParams(
+            Hash.ZERO,
+            pragueHardfork.milestone(),
+            Bytes32.random(),
+            Address.fromHexString("0x42"),
+            Optional.empty(),
+            Optional.empty());
+
+    BlockWithReceipts block =
+        new BlockWithReceipts(
+            new Block(header, new BlockBody(emptyList(), emptyList(), Optional.of(emptyList()))),
+            emptyList());
+    final List<Request> unorderedRequests =
+        List.of(
+            new Request(RequestType.CONSOLIDATION, Bytes.of(1)),
+            new Request(RequestType.DEPOSIT, Bytes.of(1)),
+            new Request(RequestType.WITHDRAWAL, Bytes.EMPTY));
+    PayloadWrapper payload =
+        new PayloadWrapper(payloadIdentifier, block, Optional.of(unorderedRequests));
+
+    when(mergeContext.retrievePayloadById(payloadIdentifier)).thenReturn(Optional.of(payload));
+
+    final var resp = resp(RpcMethod.ENGINE_GET_PAYLOAD_V4.getMethodName(), payloadIdentifier);
+    assertThat(resp).isInstanceOf(JsonRpcSuccessResponse.class);
+
+    final List<String> expectedRequests =
+        List.of(
+            Bytes.concatenate(Bytes.of(RequestType.DEPOSIT.getSerializedType()), Bytes.of(1))
+                .toHexString(),
+            Bytes.concatenate(Bytes.of(RequestType.CONSOLIDATION.getSerializedType()), Bytes.of(1))
+                .toHexString());
+    Optional.of(resp)
+        .map(JsonRpcSuccessResponse.class::cast)
+        .ifPresent(
+            r -> {
+              assertThat(r.getResult()).isInstanceOf(EngineGetPayloadResultV4.class);
+              final EngineGetPayloadResultV4 res = (EngineGetPayloadResultV4) r.getResult();
+              assertThat(res.getExecutionRequests()).isEqualTo(expectedRequests);
+            });
   }
 
   @Override
